# ksu-events-demo

./: .gitignore  LICENSE  README.md  Specification Document.docx  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ksu_events_demo/: admin.py  asgi.py  middleware.py  settings.py  urls.py  wsgi.py
ksu_events_demo/fixtures/: seed.json
ksu_events_demo/management/commands/: resetdb.py
ksu_events_demo/migrations/: 0001_initial.py
ksu_events_demo/models/: __init__.py  model_users.py
ksu_events_demo/tests/: test_login.py  test_logout.py
